test/fail/routing.app
//routing construct block must return
//routing receive block must return
//routing block only accepts the following form
application test

page root(){}

routing {
  receive(urlargs:[String]) {
  }
  construct (pagename:String, pageargs:[Int]) {
  }
}